--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,11 @@
 }
 .home p{
     font-size: 18px;
-    margin-top: 100px;
+    margin-top: 30px;
     
+}
+.homelogo img {
+    width: 200px;
+    height: 150px;
+    border-radius: 50%;
 }
